# LLM_WIKI

./: .gitignore  AGENTS.md  README.md  TASK.md  index.md  journal.md  log.md  rules.md
.claude/: launch.json
hooks/: pre-commit
inbox/: README.md
mcp-wiki/: .gitignore  01-knowledge-domain.md  02-decision-rounds.md  03-prd.md  04-agent-spec.md  05-harness-and-skills.md  06-access-plan.md  README.md  pyproject.toml
mcp-wiki/mcp_wiki/: __init__.py  server.py
mcp-wiki/serve/: agent-config.example.js  build_site.py  guide-config.example.js  guide_bridge.py  template.html
mcp-wiki/skills/wiki-guide/: SKILL.md
mcp-wiki/skills/wiki-keeper/: SKILL.md
sources/: README.md  example-source.md  karpathy-llm-wiki.md
sources/agentic-coding-basics/: 01-vibe-coding-and-agent-coding.md  02-sdlc-pipeline-in-vibe-coding.md  03-agents-subprocess-calling.md  04-plan-mode-sequential-and-parallel-agents.md  05-agent-specifications.md  06-agent-pool-and-orchestrator.md  07-harness-and-skills.md  08-model-context-protocol.md  09-loop-and-hooks.md  README.md
sources/cv-physical-ai/: nerf-gaussian-splatting.md  object-detection.md  segment-anything.md  sensor-fusion.md  sim-to-real.md  vision-foundation-models.md  vla-models.md
submissions/: README.md  source-manifest.md
templates/: lint-report.md  page.md  query-result.md  source-note.md
wiki/: overview.md
wiki/analyses/: agentic-coding-basics-synthesis.md
wiki/concepts/: agent-pool-and-orchestrator.md  agent-specification.md  agent-subprocess-calling.md  agentic-coding.md  harness-engineering.md  llm-wiki.md  (+7 more)
(+14 files in other folders)
