[project]
name = "mcp-wiki"
version = "0.1.0"
description = "MCP server + static-site serving for the CV / Physical AI LLM Wiki"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
mcp-wiki = "mcp_wiki.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_wiki"]
